src/components/Auth/auth.module.scss
@import '../../variables';

form {
  display: block;
  grid-area: 1 / 2 / 2 / 3;
  padding: 1rem; 
}

h3 {
  text-align: bottom;
  color: $white-85;
  font-family: $title-font;
  font-size: 3rem;
  font-weight: 200;
  margin: 0;
  padding: 1rem;
  
}

.auth {
  animation: .5s ease-in-out 0s 1 light-bounce-in;
  background: $gradient-colors;
  box-shadow: $header-box-shadow;
  font-family: $body-font;
  margin: 1rem 0 0;
  padding: 1rem;
  position: fixed;
  z-index: 10000;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr;
  width: 66.66%;
}

.form-element {
  justify-self: right;
  display: grid;

  grid-template-columns: 1fr 1fr;
  padding: .2rem 1rem;

  .form-label {
    margin-right: 1rem;
    text-align: right;
    align-self: center;
  }

  .form-buttons {
    justify-self: right;
  }

  .button {
    margin: 1rem 0 0 1rem;
    padding: .1rem
  }
  
  .text-input {
    background-color: $form-input;
    font-family: $body-font;
    font-size: .8rem;
    border: none;
  }
}

@keyframes light-bounce-in {
  0% {
    opacity: 0;
    transform: translateX(-20%);
  }

  50% {
    transform: translateX(5%);
  }

  100% {
    opacity: 1;
    transform: translateX(0%);
  }
}

